--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -54,8 +54,12 @@ bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+Shift+q kill
 
+# start emojipicker
+bindsym $mod+m exec --no-startup-id rofi -show emoji
+
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -show run
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -186,8 +190,14 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-	font pango:Hack Nerd Font 12
+	font pango:Hack Nerd Font 10
+	position top
+	tray_output primary
+	status_command i3status
+	colors {                                                                                                                              
+		background #00000000
+		statusline #FFFFFF
+	}
 }
 
 # Gaps
@@ -196,4 +206,8 @@ hide_edge_borders both
 gaps inner 10
 
 # Background Picture
-exec --no-startup-id exec bash $HOME/.config/.fehbg
+exec --no-startup-id exec bash $HOME/.config/fehbg
+
+# clipboard mamger
+exec --no-startup-id greenclip daemon>/dev/null
+
